# skeleton

./: .directory  CMakeLists.txt  sceletom_flags.txt
examples/: maximenko.ine  runexamples.bat
msvs/: skeleton.sln
src/: Makefile  ddm.hpp  ddmio.hpp  main.cpp  skeleton.cpp  skeleton.h
tools/arageli/: CMakeLists.txt
tools/arageli/example/: adv_simplex_method.cpp  big_int_basic.cpp  big_int_rational_creation.cpp  big_int_rational_functions.cpp  big_int_rational_operations.cpp  factorial.cpp  gram_schmidt.cpp  knuth_supergenerator.cpp  lll_reduction.cpp  lll_reduction_int.cpp  matrix_basic.cpp  matrix_column_row.cpp  matrix_gauss.cpp  matrix_linear_system.cpp  matrix_rref.cpp  matrix_smith.cpp  polynom_basic.cpp  residue.cpp  residue_linear_system.cpp  sparse_polynom_algorithms.cpp  sparse_polynom_basic.cpp  sparse_polynom_creation.cpp  sparse_polynom_io.cpp  sparse_polynom_iterator.cpp  sparse_polynom_kroneker.cpp  sparse_polynom_lagrange.cpp  sparse_polynom_matrix.cpp  sparse_polynom_matrix_smith.cpp  sparse_polynom_operations.cpp  sparse_polynom_other_operations.cpp  sparse_polynom_properties.cpp  vector_entries.cpp  vector_lcm_gcd.cpp  vector_matrix_arithmetic.cpp  vector_matrix_creation.cpp  vector_matrix_io.cpp
tools/arageli/lib/arageli_Debug_Win32/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  arageli.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog  vc100.idb
tools/arageli/lib/arageli_Fast_Win32/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  arageli.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
tools/arageli/lib/arageli_Fast_x64/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  arageli.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
tools/arageli/perf/: karatsuba_vs_classic.cpp
tools/arageli/src/_pattern/arageli/: _pattern.cpp
tools/arageli/src/arageli/: polyhedron.cpp
tools/arageli/test/: matrix_ops.hpp  stdafx.hpp
tools/arageli/test/_pattern/: _pattern.cpp
tools/arageli/tool/ts/src/ts/: ts.cpp  ts.hpp
