cmake_minimum_required(VERSION 3.8)

project(arageli)

set(CMAKE_CXX_STANDARD 14)

set(LIB_ARAGELI_HEADERS_PUBLIC
    src/_pattern/arageli/_pattern.hpp
    src/arageli/hermite/classic.hpp
    src/arageli/hermite/hafner.hpp
    src/arageli/hermite/domich.hpp
    src/arageli/hermite/storjohann.hpp
    src/arageli/setenumrnd/grid.hpp
    src/arageli/setenumrnd/integer.hpp
    src/arageli/setenumrnd/vector.hpp
    src/arageli/smith/classic.hpp
    src/arageli/smith/near_optimal.hpp
    src/arageli/smith/storjohann.hpp
    src/arageli/submatrix/hpair.hpp
    src/arageli/submatrix/indexed.hpp
    src/arageli/subvector/indexed.hpp
    src/arageli/_utility.hpp
    src/arageli/advsimplmeth.hpp
    src/arageli/algebraic.hpp
    src/arageli/algebrslt.hpp
    src/arageli/arageli.hpp
    src/arageli/auto_link.hpp
    src/arageli/bareiss.hpp
    src/arageli/basefuncs.hpp
    src/arageli/berlekamp_hensel.hpp
    src/arageli/big_const.hpp
    src/arageli/big_float.hpp
    src/arageli/big_int.hpp
    src/arageli/bigar.hpp
    src/arageli/cantor_zassenhaus.hpp
    src/arageli/cmp.hpp
    src/arageli/cone.hpp
    src/arageli/config.hpp
    src/arageli/ctrl_latexlog.hpp
    src/arageli/ctrl_slog.hpp
    src/arageli/exception.hpp
    src/arageli/factory.hpp
    src/arageli/fft.hpp
    src/arageli/frwrddecl.hpp
    src/arageli/function_traits.hpp
    src/arageli/functional.hpp
    src/arageli/gauss.hpp
    src/arageli/gcd.hpp
    src/arageli/generic.hpp
    src/arageli/gram_schmidt.hpp
    src/arageli/groebner_basis.hpp
    src/arageli/hermite.hpp
    src/arageli/intalg.hpp
    src/arageli/intconvex.hpp
    src/arageli/intcount_barvinok.hpp
    src/arageli/interval.hpp
    src/arageli/io.hpp
    src/arageli/iomanip.hpp
    src/arageli/iteradapt.hpp
    src/arageli/karatsuba.hpp
    src/arageli/linopt.hpp
    src/arageli/lll.hpp
    src/arageli/logarithm.hpp
    src/arageli/matrix.hpp
    src/arageli/misc.hpp
    src/arageli/mixcomp.hpp
    src/arageli/motzkin_burger.hpp
    src/arageli/orthogonal.hpp
    src/arageli/pollard_mult.hpp
    src/arageli/polyalg.hpp
    src/arageli/polyhedron.hpp
    src/arageli/polyhedron_relation.hpp
    src/arageli/polynom.hpp
    src/arageli/powerest.hpp
    src/arageli/prime.hpp
    src/arageli/random.hpp
    src/arageli/rational.hpp
    src/arageli/refcntr.hpp
    src/arageli/residue.hpp
    src/arageli/resultant.hpp
    src/arageli/rndbase.hpp
    src/arageli/setenumrnd.hpp
    src/arageli/sideset.hpp
    src/arageli/simplex_method.hpp
    src/arageli/skeleton.hpp
    src/arageli/smith.hpp
    src/arageli/smithpoly.hpp
    src/arageli/solve_linsys.hpp
    src/arageli/sparse_multipolynom.hpp
    src/arageli/sparse_polynom.hpp
    src/arageli/sqrfree.hpp
    src/arageli/std_import.hpp
    src/arageli/sturm.hpp
    src/arageli/tex_cartesian2d.hpp
    src/arageli/texout.hpp
    src/arageli/timer.hpp
    src/arageli/triangulation.hpp
    src/arageli/type_opers.hpp
    src/arageli/type_pair_traits.hpp
    src/arageli/type_traits.hpp
    src/arageli/vecalg.hpp
    src/arageli/vector.hpp
    src/arageli/winograd.hpp
        )

#set(LIB_SECRET_HEADERS_PRIVATE
#        "secretStoragePrivate.hpp"
#        )

set(LIB_ARAGELI_SECRET_SOURCES
    src/_pattern/arageli/_pattern.cpp
    src/arageli/hermite/hafner.cpp
    src/arageli/hermite/classic.cpp
    src/arageli/hermite/domich.cpp
    src/arageli/hermite/storjohann.cpp
    src/arageli/smith/classic.cpp
    src/arageli/smith/near_optimal.cpp
    src/arageli/smith/storjohann.cpp
    src/arageli/_utility.cpp
    src/arageli/advsimplmeth.cpp
    src/arageli/algebraic.cpp
    src/arageli/algebrslt.cpp
    src/arageli/bareiss.cpp
    src/arageli/berlekamp_hensel.cpp
    src/arageli/big_const.cpp
    src/arageli/big_float.cpp
    src/arageli/big_int.cpp
    src/arageli/bigar.cpp
    src/arageli/cantor_zassenhaus.cpp
    src/arageli/cone.cpp
    src/arageli/exception.cpp
    src/arageli/gauss.cpp
    src/arageli/gcd.cpp
    src/arageli/generic.cpp
    src/arageli/gram_schmidt.cpp
    src/arageli/groebner_basis.cpp
    src/arageli/hermite.cpp
    src/arageli/intalg.cpp
    src/arageli/intconvex.cpp
    src/arageli/intcount_barvinok.cpp
    src/arageli/io.cpp
    src/arageli/karatsuba.cpp
    src/arageli/linopt.cpp
    src/arageli/lll.cpp
    src/arageli/logarithm.cpp
    src/arageli/matrix.cpp
    src/arageli/motzkin_burger.cpp
    src/arageli/orthogonal.cpp
    src/arageli/pollard_mult.cpp
    src/arageli/polyhedron.cpp
    src/arageli/polyhedron_relation.cpp
    src/arageli/polynom.cpp
    src/arageli/powerest.cpp
    src/arageli/prime.cpp
    src/arageli/rational.cpp
    src/arageli/resultant.cpp
    src/arageli/sideset.cpp
    src/arageli/smith.cpp
    src/arageli/smithpoly.cpp
    src/arageli/solve_linsys.cpp
    src/arageli/sparse_multipolynom.cpp
    src/arageli/sparse_polynom.cpp
    src/arageli/sturm.cpp
    src/arageli/tex_cartesian2d.cpp
    src/arageli/texout.cpp
    src/arageli/timer.cpp
    src/arageli/triangulation.cpp
    src/arageli/type_opers.cpp
    src/arageli/type_traits.cpp
    src/arageli/vecalg.cpp
    src/arageli/vector.cpp
    src/arageli/winograd.cpp
)


add_library(arageli SHARED
    ${LIB_ARAGELI_HEADERS_PUBLIC}
    ${LIB_ARAGELI_SECRET_SOURCES}
    #        ${LIB_SECRET_HEADERS_PRIVATE}
    )

target_include_directories( arageli PUBLIC
    src
)
